<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentRegister">
    <data>
        <variable
            name="user"
            type="com.example.tubespbp_mbanking.model.User" />
        <variable
            name="fragment"
            type="com.example.tubespbp_mbanking.fragment.FragmentRegister" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/ivRegister"
            android:src="@drawable/rectangle_turquoise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/ivRegister"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="@+id/ivRegister"
            app:layout_constraintTop_toTopOf="@id/ivRegister" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_first_name"
            android:text="First Name"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_first_name"
            app:layout_constraintBottom_toTopOf="@id/et_first_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivRegister"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:text="@={user.firstName}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_last_name"
            android:text="Last Name"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_last_name"
            app:layout_constraintBottom_toTopOf="@id/et_last_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_last_name"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:text="@={user.lastName}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_email"
            android:text="Email Address"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_email"
            app:layout_constraintBottom_toTopOf="@id/et_email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email Address"
                android:text="@={user.email}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_password"
            android:text="Password"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_password"
            app:layout_constraintBottom_toTopOf="@id/et_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:text="@={user.password}"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_account_number"
            android:text="Account Number"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_account_number"
            app:layout_constraintBottom_toTopOf="@id/et_account_number"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_account_number"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Account Number"
                android:text="@={user.accountNumber}"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_pin"
            android:text="Pin"
            android:textColor="@color/black"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:labelFor="@id/et_pin"
            app:layout_constraintBottom_toTopOf="@id/et_pin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_pin"
            app:layout_constraintTop_toBottomOf="@+id/et_account_number"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Pin"
                android:text="@={user.pin}"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:backgroundTint="@color/coral"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{fragment.btnRegister}"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:id="@+id/loadRegister"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>